@@ -79,7 +79,7 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
     private ReportLayouter CurReportLayouter;
     private ReportFinalizer CurReportFinalizer;
     private int nReportMode = ReportFinalizer.SOCREATEDOCUMENT;
-    private String m_sReportName = "";
+    private String m_sReportName = PropertyNames.EMPTY_STRING;
     protected static final String SOREPORTFORMNAME = "ReportSource";
     private static final int SOMAINPAGE = 1;
     private static final int SOTITLEPAGE = 2;
@@ -103,7 +103,7 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
     {
         super(i_serviceFactory, 34320, i_wizardContext);
         super.addResourceHandler("Report Wizard", "dbw");
-        if (getReportResources(false) == true)
+        if (getReportResources(false))
         {
             Helper.setUnoPropertyValues(xDialogModel,
                     new String[]
@@ -245,7 +245,7 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
     private void dialogFinish()
     {
         this.xComponent.dispose();
-        if (bCloseDocument == true)
+        if (bCloseDocument)
         {
             m_reportDocument.dispose();
             return;
@@ -272,10 +272,17 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
         final SQLQueryComposer sqlQueryComposer = recordParser.getSQLQueryComposer();
         if (this.CurDBCommandFieldSelection.getSelectedCommandType() == CommandType.TABLE)
         {
-            bQueryCreated = sqlQueryComposer.setQueryCommand(this.xWindow, false, false);
-            m_reportDocument.setCommandType(CommandType.COMMAND);
-            String sQuery = sqlQueryComposer.getQuery();
-            m_reportDocument.setCommand(sQuery);
+            if (m_reportDocument instanceof ReportTextImplementation)
+            {
+                bQueryCreated = sqlQueryComposer.setQueryCommand(this.xWindow, false, false);
+                m_reportDocument.setCommandType(CommandType.COMMAND);
+                String sQuery = sqlQueryComposer.getQuery();
+                m_reportDocument.setCommand(sQuery);
+            }
+            else
+            {
+                bQueryCreated = true;
+            }
         }
         else
         {
@@ -284,24 +291,25 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
                 String sQueryName = CurDBCommandFieldSelection.getSelectedCommandName();
                 DBMetaData.CommandObject oCommand = recordParser.getQueryByName(sQueryName);
                 bHasEscapeProcessing = recordParser.hasEscapeProcessing(oCommand.getPropertySet());
-                String sCommand = (String) oCommand.getPropertySet().getPropertyValue("Command");
+                String sCommand = (String) oCommand.getPropertySet().getPropertyValue(PropertyNames.COMMAND);
                 if (bHasEscapeProcessing)
                 {
-                    // String sCommand = (String) oCommand.xPropertySet.getPropertyValue("Command");
-                    bQueryCreated = (!sCommand.equals(""));
-                    sqlQueryComposer.m_xQueryAnalyzer.setQuery(sCommand);
-                    sqlQueryComposer.prependSortingCriteria();
-// TODO: check with query
-                    m_reportDocument.setCommandType(CommandType.COMMAND);
-                    m_reportDocument.setCommand(sqlQueryComposer.getQuery());
-                    bQueryCreated = true;
+                    // String sCommand = (String) oCommand.xPropertySet.getPropertyValue(PropertyNames.COMMAND);
+                    bQueryCreated = (!sCommand.equals(PropertyNames.EMPTY_STRING));
+                    if (m_reportDocument instanceof ReportTextImplementation)
+                    {
+                        sqlQueryComposer.m_xQueryAnalyzer.setQuery(sCommand);
+                        sqlQueryComposer.prependSortingCriteria();
+                        m_reportDocument.setCommandType(CommandType.COMMAND);
+                        m_reportDocument.setCommand(sqlQueryComposer.getQuery());
+                    }
                 }
                 else
                 {
                     m_reportDocument.setCommandType(CommandType.COMMAND);
                     m_reportDocument.setCommand(sCommand);
-                    bQueryCreated = true;
                 }
+                bQueryCreated = true;
             }
             catch (Exception e)
             {
@@ -398,12 +406,8 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
         {
             return false;
         }
-        if (e.hasMoreElements())
-        {
-            return true;
+        return e.hasMoreElements();
         }
-        return false;
-    }
 
     /**
      * Return the path to the "com.sun.reportdesigner" extension
@@ -416,8 +420,7 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
         final XComponentContext xComponentContext = Helper.getComponentContext(_xMSF);
         final Object aSingleton = xComponentContext.getValueByName("/singletons/com.sun.star.deployment.PackageInformationProvider");
         XPackageInformationProvider xProvider = UnoRuntime.queryInterface(XPackageInformationProvider.class, aSingleton);
-        final String sLocation = xProvider.getPackageLocation("com.sun.reportdesigner");
-        return sLocation;
+        return xProvider.getPackageLocation("com.sun.reportdesigner");
     }
     private static XLogger m_xLogger;
 
@@ -463,10 +466,8 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
                             {
                                 XMultiServiceFactory.class
                             });
-                    m_reportDocument = (IReportDocument) aMethod.invoke(a, new Object[]
-                            {
-                                xMSF
-                            });
+                    m_reportDocument = (IReportDocument) aMethod.invoke(a, xMSF
+                            );
                 }
                 catch (Exception e)
                 {
@@ -569,7 +570,7 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
     public boolean getReportResources(boolean bgetProgressResourcesOnly)
     {
         sMsgWizardName = super.m_oResource.getResText(UIConsts.RID_REPORT);
-        if (bgetProgressResourcesOnly == false)
+        if (!bgetProgressResourcesOnly)
         {
             sShowBinaryFields = m_oResource.getResText(UIConsts.RID_REPORT + 60);
             slblTables = m_oResource.getResText(UIConsts.RID_FORM + 6);
@@ -589,7 +590,7 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
 
     public static String getBlindTextNote(Object _aDocument, Resource _oResource)
     {
-        String sBlindTextNote = "";
+        String sBlindTextNote = PropertyNames.EMPTY_STRING;
         if (_aDocument instanceof ReportTextImplementation)
         {
             sBlindTextNote = _oResource.getResText(UIConsts.RID_REPORT + 75);
@@ -619,7 +620,7 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
                     bEnabled = true;
                 }
 
-                Helper.setUnoPropertyValue(oRoadmapItem, PropertyNames.PROPERTY_ENABLED, new Boolean(bEnabled));
+                Helper.setUnoPropertyValue(oRoadmapItem, PropertyNames.PROPERTY_ENABLED, Boolean.valueOf(bEnabled));
             }
         }
         catch (com.sun.star.uno.Exception exception)
@@ -631,8 +632,8 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
     private void enableWizardSteps(String[] NewItems)
     {
         boolean bEnabled = NewItems.length > 0;
-        setControlProperty("btnWizardNext", PropertyNames.PROPERTY_ENABLED, new Boolean(bEnabled));
-        setControlProperty("btnWizardFinish", PropertyNames.PROPERTY_ENABLED, new Boolean(bEnabled));
+        setControlProperty("btnWizardNext", PropertyNames.PROPERTY_ENABLED, Boolean.valueOf(bEnabled));
+        setControlProperty("btnWizardFinish", PropertyNames.PROPERTY_ENABLED, Boolean.valueOf(bEnabled));
         enableRoadmapItems(bEnabled);   // Note: Performancewise this could be improved
     }
 
@@ -698,7 +699,7 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
             m_nID = 1;
             if (sIncSuffix != null)
             {
-                if ((!sIncSuffix.equals("")) && (!sIncSuffix.equals("_")))
+                if ((!sIncSuffix.equals(PropertyNames.EMPTY_STRING)) && (!sIncSuffix.equals("_")))
                 {
                     String sID = JavaTools.ArrayoutofString(sIncSuffix, "_")[1];
                     m_nID = Integer.parseInt(sID);
@@ -717,7 +718,7 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
             else
             {
                 boolean bEnabled = (CurGroupFieldSelection.getSelectedFieldNames().length > 0);
-                Helper.setUnoPropertyValue(getRoadmapItemByID(SOGROUPPAGE), PropertyNames.PROPERTY_ENABLED, new Boolean(bEnabled));
+                Helper.setUnoPropertyValue(getRoadmapItemByID(SOGROUPPAGE), PropertyNames.PROPERTY_ENABLED, bEnabled);
             }
         }
 
@@ -732,7 +733,7 @@ public class ReportWizard extends DatabaseObjectWizard implements XTextListener,
             else
             {
                 boolean bEnabled = (CurGroupFieldSelection.getSelectedFieldNames().length > 0);
-                Helper.setUnoPropertyValue(getRoadmapItemByID(SOGROUPPAGE), PropertyNames.PROPERTY_ENABLED, new Boolean(bEnabled));
+                Helper.setUnoPropertyValue(getRoadmapItemByID(SOGROUPPAGE), PropertyNames.PROPERTY_ENABLED, bEnabled);
             }
         }
 
